--- a/intellij-idea-ultimate/PKGBUILD
+++ b/intellij-idea-ultimate/PKGBUILD
@@ -1,24 +1,24 @@
 # Maintainer: Alexsandr Pavlov <kidoz at mail dot ru>
 pkgname=intellij-idea-ultimate
-_pkgname=idea-IU
-pkgver=2016.3.3
-_pkgver=163.11103.6
+_pkgname=ideaIU
+pkgver=2017.1
+_pkgver=171.3780.107
 pkgrel=1
-pkgdesc=" Java IDE with the fastest-growing mindshare"
+pkgdesc="Java IDE with the fastest-growing mindshare"
 arch=('i686' 'x86_64')
 options=('!strip')
-url="http://www.jetbrains.com/idea"
+url="https://www.jetbrains.com/idea"
 license=('custom')
 depends=('java-environment')
-source=(http://download.jetbrains.com/idea/ideaIU-${pkgver}.tar.gz
+source=(https://download.jetbrains.com/idea/${_pkgname}-${pkgver}.tar.gz
          jetbrains-idea.desktop)
-sha256sums=('95871c9a8aed1bd8992ff493fbc5fc31674b18ef3cd509eb8f2e5650b3419eaf'
+sha256sums=('4508a4b7b30fb97c02975d72ec5116a3a6fedc2a76758f4087f62cef2b94a8a0'
             '3a0f3804a65fbfb2e6398e4da9129ef934e7898c197e4647ef4a19a90ac810d5')
 
 package() {
   cd "${srcdir}"
   mkdir -p "${pkgdir}/opt/${pkgname}"
-  cp -r ${srcdir}/${_pkgname}-${_pkgver}/* "${pkgdir}/opt/${pkgname}"
+  cp -r ${srcdir}/idea-IU-${_pkgver}/* "${pkgdir}/opt/${pkgname}"
   if [[ $CARCH = 'i686' ]]; then
     rm -f "${pkgdir}/opt/${pkgname}/bin/libyjpagent-linux64.so"
     rm -f "${pkgdir}/opt/${pkgname}/bin/libbreakgen64.so"
